[package]
name = "counter_program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.7"
solana-program = "1.18.26"

[dev-dependencies]
solana-client = "1.18.26"
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = "1.45.1"
